# aRCWA

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: algorithm.md  anisotropic_methods.md  anisotropic_rcwa_literature_notes.md  cuda_setup.md  isotropic_rcwa_formula_readme.md
examples/anisotropic_example/: compareMethodImplementations.py  fang2023DualPolarizationNearNormal.py  fang2024NanoporeDualPolarization.py  fang2024SquareRingEmitter.py  li2024SiInAsAgDualPolarization.py  shi2025GeInAsHollowArray.py  wu2024WeylGratingConical.py  zou2024CylindricalGrating.py
examples/isotropic_example/: applsci2019AuSiMetagratingField.py  binaryGrating.py  homogeneousSlab.py  isotropicShapeGallery.py  lawp2020BinaryGratingSpectrum.py  photonicCrystalSlab.py  rectangularMetasurface.py  run_examples.py  superlensNanocylinderShow.py
src/rcwa3d_anisotropic/: __init__.py  analytic.py  backend.py  builder.py  constitutive.py  factorization.py  fourier.py  geometry.py  materials.py  phase.py  project.py  simulation.py  smatrix.py  solver.py  types.py
src/rcwa3d_isotropic/: __init__.py  _factorization.py  analytic.py  backend.py  builder.py  convergence.py  factorization.py  fields.py  fourier.py  geometry.py  materials.py  simulation.py  smatrix.py  solver.py  types.py  varrcwa.py  visualization.py
tests/: testAnisotropicSMatrixRoute.py  testGeometryFields.py  testHomogeneous.py  testIsotropicExampleStyle.py  testSMatrixAlgebra.py  testSolverPaths.py
